Fix news posts on mobile

--- a/src/pages/posts/posts.module.css
+++ b/src/pages/posts/posts.module.css
@@ -27,10 +27,11 @@
   font-family: 'grenze';
   font-size: 1.5rem;
   margin-top: 2rem;
+  padding: 0 12px;
 }
 
 .imageWrapper {
   display: block;
-  width: 500px;
+  width: 400px;
   height: auto;
 }
